# bank-service

./: .pre-commit-config.yaml  README.md  build.sh  docker-compose.yml
.github/workflows/: ci.yml
api/: .editorconfig  .ocamlformat  Dockerfile  Makefile  README.md  acmebank.opam  build.sh  docker-compose.yml  dune-project  go.mod  go.sum  schema.sql
api/cmd/: main.go  swagger.yml
api/docs/: docs.go  swagger.json
api/internal/handlers/: payment.go
api/internal/models/: payment.go
api/lib/: cors.ml  cors.mli  dune
api/models/: dune  payment.ml  payment.mli
api/pkg/db/: db.go
api/pkg/middleware/: token.go
api/routes/: dune  payment.ml  payment.mli
api/schema/: init.sql
api/static/: swagger.yml
ui/: .editorconfig  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
ui/src/: main.js
ui/src/assets/: main.css
ui/src/router/: index.js
ui/src/stores/: payment.js
ui/src/views/: Error.vue  Expired.vue  HomeView.vue  Success.vue
