(lang dune 3.14)

(name acmebank)

(generate_opam_files true)

(source
 (github acme-sky/bank-service))

(maintainers "Santo Cariotti")

(documentation https://acme-sky.github.io/docs)

(package
 (name acmebank)
 (synopsis "An API for a bank service")
 (description "API for the bank service used in ACME Sky project")
 (depends ocaml dune))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
